before adding digital ocean

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 (backend-env)#cat .env
 SENDER_EMAIL = noreply@artiwiztech.com
 PASSWORD = Polgara!@12
-KEY_ID = "rzp_test_V7OA6RGtfz7ILD"
-KEY_SECRET = "7DQCW16JtDmORBaSxLrwArPh"
+KEY_ID = "rzp_test_HG5GAR8YfRNzGa"
+KEY_SECRET = "Ua2S11sZlyLFZ1uUs2SrAaJ5"
 (backend-env)#
